--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
 
   <header>
     <div class="brand">
-      <img src="https://raw.githubusercontent.com/prizebooth/assets/main/logo-mark.svg" alt="" width="28" height="28">
+      <img src="/assets/prizebooth_logo.png" alt="" width="197" height="30">
       Prizebooth
     </div>
     <nav>
@@ -271,7 +271,7 @@
         </div>
       </div>
       <div class="preview">
-        <img src="mobile-ui-preview.png" alt="Prizebooth mobile preview" style="width:100%; display:block; border-radius:18px;">
+        <img src="/assets/mobile-ui-preview.png" alt="Prizebooth mobile preview" style="width:100%; display:block; border-radius:18px;">
       </div>
     </section>
 
